# modemstuff

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app/: CMakeLists.txt  app.c
apps/aprscli/: CMakeLists.txt  aprscli.c  args.c  args.h
apps/aprsdp/: CMakeLists.txt
apps/aprsig/: CMakeLists.txt
apps/audmod/: CMakeLists.txt  audmod.c  config.c  config.h  demodulator.c  demodulator.h  modulator.c  modulator.h
apps/ax25tnc/: CMakeLists.txt  ax25tnc.c  config.c  config.h  demodulator.c  demodulator.h  modulator.c  modulator.h
apps/netaud/: CMakeLists.txt  audio.c  audio.h  buffer.c  buffer.h  main.c  netaud.c  server.c  server.h  utils.h
apps/test_demod/: CMakeLists.txt  config.c  config.h  demodulator.c  demodulator.h  test_demod.c
cmake/modules/: FindPORTAUDIO.cmake
docs/: audmod.example.conf  ax25tnc.example.conf  test_demod.example.conf
include/configstuff/: config.h
include/datastuff/: bitarray.h  linkedbuffer.h
include/hamstuff/: ax25.h  ax25_call.h  ax25_crc.h  ax25_deframer.h  ax25_frame.h  ax25_framer.h  ax25_packet.h  hamstuff.h  kiss.h
include/hamstuff/aprs/: aprs.h  position.h  status.h  time.h
include/hamstuff/aprs/field/: position.h  time.h
include/hamstuff/aprs/report/: object.h  position.h  status.h
include/hamstuff/ax25/: ax25.h  deframer.h  framer.h  packet.h
include/modemstuff/: ax25_call.h  ax25_crc.h  ax25_deframer.h  ax25_frame.h  bitdet.h  butterworth.h  dds.h  fsk.h  goertzel.h  kiss.h  linecode.h  modemstuff.h  window.h
include/modemstuff/datastuff/: linkedbuffer.h
include/modemstuff/netstuff/: netclient.h  netserver.h
include/modemstuff/soundcard/: soundcard.h
include/netstuff/: netclient.h  netserver.h  send.h
src/: CMakeLists.txt
src/configstuff/: CMakeLists.txt  config.c
src/datastuff/: CMakeLists.txt  bitarray.c  linkedbuffer.c
src/hamstuff/: CMakeLists.txt  ax25_call.c  ax25_crc.c  ax25_deframer.c  ax25_frame.c  ax25_framer.c  ax25_packet.c  kiss.c
src/hamstuff/aprs/: aprs.c  position.c  time.c
src/hamstuff/aprs/field/: position.c  time.c
src/hamstuff/aprs/report/: position.c  status.c
src/hamstuff/ax25/: call.c  crc.c  deframer.c  framer.c  packet.c
src/modemstuff/: CMakeLists.txt  ax25_call.c  ax25_crc.c  ax25_deframer.c  ax25_frame.c  bitdet.c  butterworth.c  dds.c  fsk.c  goertzel.c  kiss.c  linecode.c  window.c
src/netstuff/: CMakeLists.txt  netclient.c  netserver.c  send.c
src/soundcard/: CMakeLists.txt  soundcard.c
